added top 0 to spin 1, to make it working

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
         </div>
       </header>
     </section> -->
-  <div class="loader position_fixed display_flex w_160 h_160 bw_25 time_40s">
+  <div class="loader position_fixed display_flex w_160 top_0 h_160 bw_25 time_40s">
     <div class="loader display_flex w_100p bw_20 time_40s">
       <div class="loader display_flex w_100p bw_20 time_40s">
         <div class="loader display_flex w_100p bw_20 time_40s">
-          <div class="loader display_flex w_100p bw_20 time_40s">
-          </div>
+          <div class="loader display_flex w_100p bw_20 time_40s"></div>
         </div>
       </div>
     </div>
