put message for submit button

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <form action="" id="emailForm" class="br_15 bg_3 display_flex fd_column p_50-300 mb_30 mt_30">
       <input type="text" id="email" placeholder="Enter your email..." class=" w_400">
       <input type="text" id="message" placeholder="Message" class="  h_200 mt_20">
-      <input type="submit" class="mt_20">
+      <input type="button" onclick="submitButton()" value="Submit" class="mt_20">
     </form>
 
     <p class="color_5 fs_50">or</p>
@@ -274,6 +274,13 @@
       <p class="mtb_10">© 2023 Norwin C. Sinas</p>
     </footer>
   </section>
+
+  <script>
+    function submitButton() {
+      alert("This site is under maintenance, will be right back soon !!!");
+    }
+  </script>
+
 </body>
 
 </html>
