add responsive tell skills

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!-- Introduction2 section----------------------------------------------------------------------- -->
   <section id="introduction2Section" class="bg_3 display_flex fd_column ai_center">
     <img src="./img/tamtamcut.jpg" alt="profile pic" class="h_200 w_200 borderRadius_50p mt_100" />
-    <p class="ff_forte color_3 fs_50 mt_50">Hello</p>
+    <h1 class="ff_forte color_3 fs_50 mt_50">Hello</h1>
     <p class="fs_20 color_3 mt_30 mb_30 w_1000">
       A Computer Science graduate enthusiast, looking for a Web Programming position and willing to maximize necessary
       knowledge and skills. Having the analytical
