--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
   <!-- Resume section------------------------------------------------------------------------------ -->
   <section id="resumeSection" class="bg_5 display_flex fd_column ai_center">
     <h1 class="ff_forte fs_50 color_5 mt_50 mb_30">Work Experience</h1>
-    <div class="bg_white w_800 display_flex  p_50 br_15">
+    <div class="bg_white w_800 display_flex p_50 br_15">
       <div class="fb_350">
-        <div class="display_flex fd_column jc_end">
+        <div class="display_flex fd_column">
           <h2>Jan. 2021 - current</h2>
           <p><strong> Software Developer</strong></p>
           <p>Tecdia Cebu Inc.</p>
@@ -123,7 +123,7 @@
 
     <div class="bg_white w_800 display_flex  mt_50 p_50 br_15">
       <div class="fb_350">
-        <div class="display_flex fd_column jc_end">
+        <div class="display_flex fd_column">
           <h2>Sep 2020 - Jan. 2021</h2>
           <p><strong>Programmer Analyst</strong></p>
           <p>Prince Retail group of Companies</p>
@@ -137,9 +137,9 @@
       </div>
     </div>
 
-    <div class="bg_white w_800 display_flex  mt_50 p_50 br_15">
+    <div id="resumeDiv3" class="bg_white w_800 display_flex  mt_50 p_50 br_15">
       <div class="fb_350">
-        <div class="display_flex fd_column jc_end">
+        <div class="display_flex fd_column">
           <h2>Sep. 2018 - Sep. 2020</h2>
           <p><strong>Application Support Analyst</strong></p>
           <p>Prince Retail group of Companies</p>
@@ -255,7 +255,7 @@
     </div>
   </section>
 
-  <!-- Address section ---------------------------------------------- -->
+  <!-- Contact section ---------------------------------------------- -->
   <section id="addressSection" class="bg_aliceblue display_flex fd_column ai_center">
     <h1 class="ff_forte fs_50 color_3 mt_100">Get In Touch</h1>
     <form action="" id="emailForm" class="br_15 bg_3 display_flex fd_column p_50-300 mb_30 mt_30">
@@ -269,8 +269,8 @@
   </section>
 
   <!-- Footer section ---------------------------------------------- -->
-  <section id="contact">
-    <footer class="bg_lightGray display_flex jc_center">
+  <section id="footerSection" class="bg_lightGray display_flex jc_center">
+    <footer class="">
       <p class="mtb_10">© 2023 Norwin C. Sinas</p>
     </footer>
   </section>
