--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- Introduction1 section----------------------------------------------------------------------- -->
   <section id="introduction1Section" class="bg_aliceblue display_flex fd_column jc_center ai_center">
-    <h2 class="ff_forte fs_70 color_3 mt_50">I'm Norwin Sinas</h2>
+    <h1 class="ff_forte fs_70 color_3 mt_50">I'm Norwin Sinas</h1>
     <p class="fs_30 color_3">an aspiring web programmer.</p>
     <img src="./img/mountain-silhouette-edited2.png" alt="" class="mt_70 mb_30 h_310" />
   </section>
@@ -105,7 +105,7 @@
     <h1 class="ff_forte fs_50 color_5 mt_50 mb_30">Work Experience</h1>
     <div class="bg_white w_800 display_flex  p_50 br_15">
       <div class="fb_350">
-        <div class="display_flex fd_column jc_end">
+        <div class="display_flex fd_column">
           <h2>Jan. 2021 - current</h2>
           <p><strong> Software Developer</strong></p>
           <p>Tecdia Cebu Inc.</p>
@@ -123,7 +123,7 @@
 
     <div class="bg_white w_800 display_flex  mt_50 p_50 br_15">
       <div class="fb_350">
-        <div class="display_flex fd_column jc_end">
+        <div class="display_flex fd_column">
           <h2>Sep 2020 - Jan. 2021</h2>
           <p><strong>Programmer Analyst</strong></p>
           <p>Prince Retail group of Companies</p>
@@ -139,7 +139,7 @@
 
     <div class="bg_white w_800 display_flex  mt_50 p_50 br_15">
       <div class="fb_350">
-        <div class="display_flex fd_column jc_end">
+        <div class="display_flex fd_column">
           <h2>Sep. 2018 - Sep. 2020</h2>
           <p><strong>Application Support Analyst</strong></p>
           <p>Prince Retail group of Companies</p>
@@ -158,7 +158,7 @@
 
     <div class="bg_white w_800 display_flex mt_50 mb_30 p_50 br_15">
       <div class="fb_350">
-        <div class="display_flex fd_column jc_end">
+        <div class="display_flex fd_column">
           <h2>Certificate / Award</h2>
         </div>
       </div>
@@ -255,8 +255,8 @@
     </div>
   </section>
 
-  <!-- Address section ---------------------------------------------- -->
-  <section id="addressSection" class="bg_aliceblue display_flex fd_column ai_center">
+  <!-- contact section ---------------------------------------------- -->
+  <section id="contactSection" class="bg_aliceblue display_flex fd_column ai_center">
     <h1 class="ff_forte fs_50 color_3 mt_100">Get In Touch</h1>
     <form action="" id="emailForm" class="br_15 bg_3 display_flex fd_column p_50-300 mb_30 mt_30">
       <input type="text" id="email" placeholder="Enter your email..." class=" w_400">
