--- a/index.html
+++ b/index.html
@@ -10,29 +10,9 @@
 </head>
 
 <body>
-  <!-- head section---------------------------------------------------------------------- -->
-  <!-- <section id="header-section" class="position_sticky t_0">
-      <header>
-        <div class="bg_1 display_flex ai_center jc_start h_60">
-          <h2 class="h_100p w_200 display_flex ai_center jc_center">
-            <a class="color_1 textDecoration_none" href="">NORWIN</a>
-          </h2>
-          <h3 class="h_100p w_80 display_flex ai_center jc_center">
-            <a class="color_1 textDecoration_none" href="">Home</a>
-          </h3>
-          <h3 class="h_100p w_80 display_flex ai_center jc_center">
-            <a class="color_1 textDecoration_none" href="">Resume</a>
-          </h3>
-          <h3 class="h_100p w_80 display_flex ai_center jc_center">
-            <a class="color_1 textDecoration_none" href="">Hobby</a>
-          </h3>
-          <h3 class="h_100p w_80 display_flex ai_center jc_center">
-            <a class="color_1 textDecoration_none" href="">Address</a>
-          </h3>
-        </div>
-      </header>
-    </section> -->
-  <div class="loader position_fixed display_flex w_160 top_0 h_160 bw_25 time_40s">
+  <!-- spin section---------------------------------------------------------------------- -->
+
+  <!-- <div class="loader position_fixed display_flex w_160 top_0 h_160 bw_25 time_40s">
     <div class="loader display_flex w_100p bw_20 time_40s">
       <div class="loader display_flex w_100p bw_20 time_40s">
         <div class="loader display_flex w_100p bw_20 time_40s">
@@ -60,21 +40,23 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <!-- Introduction1 section----------------------------------------------------------------------- -->
   <section id="introduction1Section" class="bg_aliceblue display_flex fd_column jc_center ai_center">
-    <h1 class="ff_forte fs_70 color_3 mt_50">I'm Norwin Sinas</h1>
-    <p class="fs_30 color_3">an aspiring web programmer.</p>
-    <img src="./img/mountain-silhouette-edited2.png" alt="" class="mt_70 mb_30 h_310" />
+    <h1 class="ff_forte fs_8rem color_3 mt_5p">I'm Norwin Sinas</h1>
+    <p class="fs_4rem color_3 mt_3p">an aspiring web programmer.</p>
+    <div class="display_flex mw_50p mt_3p">
+      <img src="./img/mountain-silhouette-edited2.png" alt="mt image" class="mw_100p mb_3p" />
+    </div>
   </section>
 
   <!-- Introduction2 section----------------------------------------------------------------------- -->
   <section id="introduction2Section" class="bg_3 display_flex fd_column ai_center">
-    <img src="./img/tamtamcut.jpg" alt="profile pic" class="h_200 w_200 borderRadius_50p mt_100" />
-    <h1 class="ff_forte color_3 fs_50 mt_50">Hello</h1>
-    <p class="fs_20 color_3 mt_30 mb_30 w_1000">
+    <img src="./img/tamtamcut.jpg" alt="profile pic" class="mh_25p mw_25p borderRadius_50p mt_5p" />
+    <h1 class="ff_forte color_3 fs_7rem mt_3p">Hello</h1>
+    <p class="fs_3rem color_3 mt_3p mb_3p mw_80p">
       A Computer Science graduate enthusiast, looking for a Web Programming position and willing to maximize necessary
       knowledge and skills. Having the analytical
       abilities and technical skills necessary for IT jobs and good moral attitude imperative to have a good
@@ -84,8 +66,8 @@
 
   <!-- Skills section----------------------------------------------------------------------------- -->
   <section id="skillsSection" class="bg_4 display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_50 color_5 mt_50 mb_30">Skills</h1>
-    <div class="bg_white color_3 w_400 display_flex jc_center p_20 br_15 mb_30">
+    <h1 class="ff_forte fs_7rem color_5 mt_5p">Skills</h1>
+    <div class="bg_white fs_3rem w_25p color_3 display_flex jc_center  br_15 mb_3p mt_3p p_2p">
       <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -101,10 +83,10 @@
   </section>
 
   <!-- Resume section------------------------------------------------------------------------------ -->
-  <section id="resumeSection" class="bg_5 display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_50 color_5 mt_50 mb_30">Work Experience</h1>
-    <div class="bg_white w_800 display_flex  p_50 br_15">
-      <div class="fb_350">
+  <section id="resumeSection" class="bg_5 fs_3rem display_flex fd_column ai_center">
+    <h1 class="ff_forte fs_7rem color_5 mt_5p">Work Experience</h1>
+    <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
+      <div class="fb_20p">
         <div class="display_flex fd_column">
           <h2>Jan. 2021 - current</h2>
           <p><strong> Software Developer</strong></p>
@@ -113,7 +95,7 @@
         </div>
       </div>
 
-      <div class="fb_500">
+      <div class="fb_80p">
         <p>- Analyze modules flow</p>
         <p class="color_5">- Create new forms in SyteLine to make current manual process automate.</p>
         <p>- Modify existing forms to fit in desired requirements.</p>
@@ -121,8 +103,8 @@
       </div>
     </div>
 
-    <div class="bg_white w_800 display_flex  mt_50 p_50 br_15">
-      <div class="fb_350">
+    <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
+      <div class="fb_20p">
         <div class="display_flex fd_column">
           <h2>Sep 2020 - Jan. 2021</h2>
           <p><strong>Programmer Analyst</strong></p>
@@ -130,15 +112,15 @@
           <p></p>Basubas St., Tipolo, Mandaue City</p>
         </div>
       </div>
-      <div class="fb_500">
+      <div class="fb_80p">
         <p>- Develop new module</p>
         <p>- Maintain, enhance, and fix bugs of existing applicatione</p>
         <p>- Programming language use: ASP.Net, C#, MSSQL, HTML, CSS</p>
       </div>
     </div>
 
-    <div class="bg_white w_800 display_flex  mt_50 p_50 br_15">
-      <div class="fb_350">
+    <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
+      <div class="fb_20p">
         <div class="display_flex fd_column">
           <h2>Sep. 2018 - Sep. 2020</h2>
           <p><strong>Application Support Analyst</strong></p>
@@ -146,7 +128,7 @@
           <p>Basubas St., Tipolo, Mandaue City</p>
         </div>
       </div>
-      <div class="fb_500">
+      <div class="fb_80p">
         <p>- Support applications issues and concerns (Barter, JDA, EcPay, Local Gift) - QA testing in new patch of
           Barter Application</p>
         <p>- User accounts maintenance (creates, disable, enable)</p>
@@ -156,13 +138,13 @@
       </div>
     </div>
 
-    <div class="bg_white w_800 display_flex mt_50 mb_30 p_50 br_15">
-      <div class="fb_350">
+    <div class="bg_white w_70p display_flex p_5p br_15 mt_3p mb_3p gap_3p">
+      <div class="fb_20p">
         <div class="display_flex fd_column">
           <h2>Certificate / Award</h2>
         </div>
       </div>
-      <div class="fb_500">
+      <div class="fb_80p">
         <p><strong>Work Attitude and Values Enhancement</strong></p>
         <p>Prince Retail Group of Companies</p>
         <p>Tipolo, Mandaue City</p>
@@ -178,7 +160,7 @@
   </section>
 
   <!-- hobby section------------------------------------------------ -->
-  <section id="hobbySection" class="bg_white display_flex fd_column ai_center">
+  <!-- <section id="hobbySection" class="bg_white display_flex fd_column ai_center">
     <h1 class="w_800 textAlign_center color_3 ff_forte fs_50 mt_100">Photography</h1>
     <p class="mt_30 fs_20 color_5">As a hobby of mine, I find my self enjoying taking photo of anything, but limited
       since I'm only using my cellphone.</p>
@@ -253,14 +235,14 @@
         <img src="./img/img1.jpg" alt="" />
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- contact section ---------------------------------------------- -->
-  <section id="contactSection" class="bg_aliceblue display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_50 color_3 mt_100">Get In Touch</h1>
-    <form action="" id="emailForm" class="br_15 bg_3 display_flex fd_column p_50-300 mb_30 mt_30">
-      <input type="text" id="email" placeholder="Enter your email..." class=" w_400">
-      <input type="text" id="message" placeholder="Message" class="  h_200 mt_20">
+  <section id="contactSection" class="bg_aliceblue fs_3rem display_flex fd_column ai_center">
+    <h1 class="ff_forte fs_7rem color_3 mt_5p">Get In Touch</h1>
+    <form action="" id="emailForm" class="br_15 bg_3 display_flex fd_column w_70p p_5p  mt_2p">
+      <input type="text" id="email" placeholder="Enter your email..." class=" mw_50p">
+      <input type="text" id="message" placeholder="Message" class="h_50p mt_20">
       <input type="button" onclick="submitButton()" value="Submit" class="mt_20">
     </form>
 
@@ -271,7 +253,7 @@
   <!-- Footer section ---------------------------------------------- -->
   <section id="contact">
     <footer class="bg_lightGray display_flex jc_center">
-      <p class="mtb_10">© 2023 Norwin C. Sinas</p>
+      <p class="mtb_1p fs_3rem">© 2023 Norwin C. Sinas</p>
     </footer>
   </section>
 
