--- a/index.html
+++ b/index.html
@@ -10,43 +10,11 @@
 </head>
 
 <body>
-  <!-- spin section---------------------------------------------------------------------- -->
-
-  <!-- <div class="loader position_fixed display_flex w_160 top_0 h_160 bw_25 time_40s">
-    <div class="loader display_flex w_100p bw_20 time_40s">
-      <div class="loader display_flex w_100p bw_20 time_40s">
-        <div class="loader display_flex w_100p bw_20 time_40s">
-          <div class="loader display_flex w_100p bw_20 time_40s"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="loader position_fixed display_flex top_210 bw_20 w_120 h_120 time_30s">
-    <div class="loader display_flex bw_15 w_100p time_30s">
-      <div class="loader display_flex bw_15 w_100p time_30s">
-        <div class="loader display_flex bw_15 w_100p time_30s">
-          <div class="loader display_flex bw_15 w_100p time_30s"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="loader position_fixed display_flex top_368 bw_9 w_80 h_80 time_20s">
-    <div class="loader display_flex bw_10 w_100p time_20s">
-      <div class="loader display_flex bw_10 w_100p time_20s">
-        <div class="loader display_flex bw_10 w_100p time_20s">
-          <div class="loader display_flex bw_10 w_100p time_20s"></div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
 
   <!-- Introduction1 section----------------------------------------------------------------------- -->
   <section id="introduction1Section" class="bg_aliceblue display_flex fd_column jc_center ai_center">
-    <h1 class="ff_forte fs_8rem color_3 mt_5p">I'm Norwin Sinas</h1>
-    <p class="fs_4rem color_3 mt_3p">an aspiring web programmer.</p>
+    <h1 class="ff_forte fs_7rem color_3 mt_5p">I'm Norwin Sinas</h1>
+    <p class="fs_3rem color_3 mt_3p">an aspiring web programmer.</p>
     <div class="display_flex mw_50p mt_3p">
       <img src="./img/mountain-silhouette-edited2.png" alt="mt image" class="mw_100p mb_3p" />
     </div>
@@ -54,9 +22,9 @@
 
   <!-- Introduction2 section----------------------------------------------------------------------- -->
   <section id="introduction2Section" class="bg_3 display_flex fd_column ai_center">
-    <img src="./img/tamtamcut.jpg" alt="profile pic" class="mh_25p mw_25p borderRadius_50p mt_5p" />
-    <h1 class="ff_forte color_3 fs_7rem mt_3p">Hello</h1>
-    <p class="fs_3rem color_3 mt_3p mb_3p mw_80p">
+    <img src="./img/tamtamcut.jpg" alt="profile pic" class="mh_20p mw_20p  borderRadius_50p mt_7p" />
+    <h1 class="ff_forte color_3 fs_6rem mt_3p">Hello</h1>
+    <p class="fs_2p5rem color_3 mt_3p mb_3p mw_60p">
       A Computer Science graduate enthusiast, looking for a Web Programming position and willing to maximize necessary
       knowledge and skills. Having the analytical
       abilities and technical skills necessary for IT jobs and good moral attitude imperative to have a good
@@ -66,8 +34,8 @@
 
   <!-- Skills section----------------------------------------------------------------------------- -->
   <section id="skillsSection" class="bg_4 display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_7rem color_5 mt_5p">Skills</h1>
-    <div class="bg_white fs_3rem w_25p color_3 display_flex jc_center  br_15 mb_3p mt_3p p_2p">
+    <h1 class="ff_forte fs_6rem color_5 mt_7p">Skills</h1>
+    <div class="bg_white fs_2p5rem w_25p color_3 display_flex jc_center  br_15 mb_3p mt_3p p_2p">
       <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -83,8 +51,8 @@
   </section>
 
   <!-- Resume section------------------------------------------------------------------------------ -->
-  <section id="resumeSection" class="bg_5 fs_3rem display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_7rem color_5 mt_5p">Work Experience</h1>
+  <section id="resumeSection" class="bg_5 fs_2p5rem display_flex fd_column ai_center">
+    <h1 class="ff_forte fs_6rem color_5 mt_7p">Work Experience</h1>
     <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
       <div class="fb_20p">
         <div class="display_flex fd_column">
@@ -160,11 +128,12 @@
   </section>
 
   <!-- hobby section------------------------------------------------ -->
-  <!-- <section id="hobbySection" class="bg_white display_flex fd_column ai_center">
-    <h1 class="w_800 textAlign_center color_3 ff_forte fs_50 mt_100">Photography</h1>
-    <p class="mt_30 fs_20 color_5">As a hobby of mine, I find my self enjoying taking photo of anything, but limited
+  <section id="hobbySection" class="bg_white display_flex fd_column ai_center">
+    <h1 class="textAlign_center color_3 ff_forte fs_6rem mt_7p">Photography</h1>
+    <p class="mt_2p fs_3rem color_5 mw_50p">As a hobby of mine, I find my self enjoying taking photo of anything, but
+      limited
       since I'm only using my cellphone.</p>
-    <div class="gallery mt_30 mb_30">
+    <div class="gallery mt_10p  mb_10p">
       <div class="bg_1 gridColumnSpan_4 gridRowSpan_2">
         <img src="./img/img14.jpg" alt="" />
       </div>
@@ -235,25 +204,26 @@
         <img src="./img/img1.jpg" alt="" />
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- contact section ---------------------------------------------- -->
-  <section id="contactSection" class="bg_aliceblue fs_3rem display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_7rem color_3 mt_5p">Get In Touch</h1>
-    <form action="" id="emailForm" class="br_15 bg_3 display_flex fd_column w_70p p_5p  mt_2p">
-      <input type="text" id="email" placeholder="Enter your email..." class=" mw_50p">
-      <input type="text" id="message" placeholder="Message" class="h_50p mt_20">
-      <input type="button" onclick="submitButton()" value="Submit" class="mt_20">
+  <section id="contactSection" class="bg_aliceblue display_flex fd_column ai_center">
+    <h1 class="ff_forte fs_6rem color_3 mt_7p">Get In Touch</h1>
+    <form action="" id="emailForm" class=" br_15 bg_3 display_flex fd_column w_70p p_3p  mt_2p">
+      <input type="text" id="email" placeholder="Enter your email..." class="mw_50p fs_2p5rem p_1p">
+      <input type="text" id="message" placeholder="Message..." class="h_160 mt_1p fs_2p5rem p_1p">
+      <input type="button" onclick="submitButton()" value="Submit" class="mt_1p fs_2p5rem p_1p">
     </form>
 
-    <p class="color_5 fs_50">or</p>
-    <p class="color_5 fs_30 mt_20 mb_70">email me at <a href="https://gmail.com">norwinsinas@gmail.com</a> </p>
+    <p class="color_5 fs_5rem mt_2p">or</p>
+    <p class="color_5 mt_2p mb_10p fs_4rem ta_center mw_80p">email me at <a
+        href="https://gmail.com">norwinsinas@gmail.com</a> </p>
   </section>
 
   <!-- Footer section ---------------------------------------------- -->
   <section id="contact">
     <footer class="bg_lightGray display_flex jc_center">
-      <p class="mtb_1p fs_3rem">© 2023 Norwin C. Sinas</p>
+      <p class="mtb_1p fs_2rem">© 2023 Norwin C. Sinas</p>
     </footer>
   </section>
 
@@ -262,7 +232,6 @@
       alert("This site is under maintenance, will be right back soon !!!");
     }
   </script>
-
 </body>
 
 </html>
