--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Norwin Sinas</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -13,8 +15,8 @@
 
   <!-- Introduction1 section----------------------------------------------------------------------- -->
   <section id="introduction1Section" class="bg_aliceblue display_flex fd_column jc_center ai_center">
-    <h1 class="ff_forte fs_7rem color_3 mt_5p">I'm Norwin Sinas</h1>
-    <p class="fs_3rem color_3 mt_3p">an aspiring web programmer.</p>
+    <h1 class="ff_lugarismo fs_7rem color_3 mt_5p">I'm Norwin Sinas</h1>
+    <p class="ff_didact fs_3rem color_3 mt_3p">an aspiring web programmer.</p>
     <div class="display_flex mw_50p mt_3p">
       <img src="./img/mountain-silhouette-edited2.png" alt="mt image" class="mw_100p mb_3p" />
     </div>
@@ -23,8 +25,8 @@
   <!-- Introduction2 section----------------------------------------------------------------------- -->
   <section id="introduction2Section" class="bg_3 display_flex fd_column ai_center">
     <img src="./img/tamtamcut.jpg" alt="profile pic" class="mh_20p mw_20p  borderRadius_50p mt_7p" />
-    <h1 class="ff_forte color_3 fs_6rem mt_3p">Hello</h1>
-    <p class="fs_2p5rem color_3 mt_3p mb_3p mw_60p">
+    <h1 class="ff_lugarismo color_3 fs_6rem mt_3p">Hello</h1>
+    <p class="ff_didact fs_2p5rem color_3 mt_3p mb_3p mw_60p">
       A Computer Science graduate enthusiast, looking for a Web Programming position and willing to maximize necessary
       knowledge and skills. Having the analytical
       abilities and technical skills necessary for IT jobs and good moral attitude imperative to have a good
@@ -34,8 +36,8 @@
 
   <!-- Skills section----------------------------------------------------------------------------- -->
   <section id="skillsSection" class="bg_4 display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_6rem color_5 mt_7p">Skills</h1>
-    <div class="bg_white fs_2p5rem w_25p color_3 display_flex jc_center  br_15 mb_3p mt_3p p_2p">
+    <h1 class="ff_lugarismo fs_6rem color_5 mt_7p">Skills</h1>
+    <div class="ff_didact bg_white fs_2p5rem w_25p color_3 display_flex jc_center  br_15 mb_3p mt_3p p_2p">
       <ul>
         <li>HTML</li>
         <li>CSS</li>
@@ -51,8 +53,8 @@
   </section>
 
   <!-- Resume section------------------------------------------------------------------------------ -->
-  <section id="resumeSection" class="bg_5 fs_2p5rem display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_6rem color_5 mt_7p">Work Experience</h1>
+  <section id="resumeSection" class="bg_5 ff_didact fs_2p5rem display_flex fd_column ai_center">
+    <h1 class="ff_lugarismo fs_6rem color_5 mt_7p">Work Experience</h1>
     <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
       <div class="fb_20p">
         <div class="display_flex fd_column">
@@ -129,8 +131,9 @@
 
   <!-- hobby section------------------------------------------------ -->
   <section id="hobbySection" class="bg_white display_flex fd_column ai_center">
-    <h1 class="textAlign_center color_3 ff_forte fs_6rem mt_7p">Photography</h1>
-    <p class="mt_2p fs_3rem color_5 mw_50p">As a hobby of mine, I find my self enjoying taking photo of anything, but
+    <h1 class="textAlign_center color_3 ff_lugarismo fs_6rem mt_7p">Photography</h1>
+    <p class="ff_didact mt_2p fs_3rem color_5 mw_50p">As a hobby of mine, I find my self enjoying taking photo of
+      anything, but
       limited
       since I'm only using my cellphone.</p>
     <div class="gallery mt_10p  mb_10p">
@@ -207,12 +210,12 @@
   </section>
 
   <!-- contact section ---------------------------------------------- -->
-  <section id="contactSection" class="bg_aliceblue display_flex fd_column ai_center">
-    <h1 class="ff_forte fs_6rem color_3 mt_7p">Get In Touch</h1>
+  <section id="contactSection" class="ff_didact bg_aliceblue display_flex fd_column ai_center">
+    <h1 class="ff_lugarismo fs_6rem color_3 mt_7p">Get In Touch</h1>
     <form action="" id="emailForm" class=" br_15 bg_3 display_flex fd_column w_70p p_3p  mt_2p">
-      <input type="text" id="email" placeholder="Enter your email..." class="mw_50p fs_2p5rem p_1p">
-      <input type="text" id="message" placeholder="Message..." class="h_160 mt_1p fs_2p5rem p_1p">
-      <input type="button" onclick="submitButton()" value="Submit" class="mt_1p fs_2p5rem p_1p">
+      <input type="text" id="email" placeholder="Enter your email..." class="ff_didact mw_50p fs_2p5rem p_1p">
+      <input type="text" id="message" placeholder="Message..." class="ff_didact h_160 mt_1p fs_2p5rem p_1p">
+      <input type="button" onclick="submitButton()" value="Submit" class="ff_didact mt_1p fs_2p5rem p_1p">
     </form>
 
     <p class="color_5 fs_5rem mt_2p">or</p>
