justify some words

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <!-- Introduction2 section----------------------------------------------------------------------- -->
   <section id="introduction2Section" class="bg_3 display_flex fd_column ai_center">
     <img src="./img/tamtamcut.jpg" alt="profile pic" class="mh_20p mw_20p  borderRadius_50p mt_7p" />
-    <h1 class="ff_lugarismo color_3 fs_6rem mt_3p">Hello</h1>
-    <p class="ff_didact fs_2p5rem color_3 mt_3p mb_3p mw_60p">
+    <h1 class="ff_lugarismo fs_6rem ai_center color_3 mt_3p">Hello</h1>
+    <p class="ff_didact fs_2p5rem ta_justify color_3 mt_3p mb_3p mw_60p">
       A Computer Science graduate enthusiast, looking for a Web Programming position and willing to maximize necessary
       knowledge and skills. Having the analytical
       abilities and technical skills necessary for IT jobs and good moral attitude imperative to have a good
@@ -132,7 +132,8 @@
   <!-- hobby section------------------------------------------------ -->
   <section id="hobbySection" class="bg_white display_flex fd_column ai_center">
     <h1 class="textAlign_center color_3 ff_lugarismo fs_6rem mt_7p">Photography</h1>
-    <p class="ff_didact mt_2p fs_3rem color_5 mw_50p">As a hobby of mine, I find my self enjoying taking photo of
+    <p class="ff_didact mt_2p fs_3rem color_5 mw_50p ta_justify">As a hobby of mine, I find my self enjoying taking
+      photo of
       anything, but
       limited
       since I'm only using my cellphone.</p>
