add back to top button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <!-- scroll top ------------------------------------------------------------------------------------>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">▲</button>
+
 
   <!-- Introduction1 section----------------------------------------------------------------------- -->
   <section id="introduction1Section" class="bg_aliceblue display_flex fd_column jc_center ai_center">
@@ -232,6 +235,22 @@
   </section>
 
   <script>
+    let mybutton = document.getElementById("myBtn");
+    window.onscroll = function () { scrollFunction() };
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+
     function submitButton() {
       alert("This site is under maintenance, will be right back soon !!!");
     }
