--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- scroll top ------------------------------------------------------------------------------------>
-  <button onclick="topFunction()" id="myBtn" title="Go to top">▲</button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">↑</button>
 
 
   <!-- Introduction1 section----------------------------------------------------------------------- -->
