--- a/index.html
+++ b/index.html
@@ -142,73 +142,73 @@
       since I'm only using my cellphone.</p>
     <div class="gallery mt_10p  mb_10p">
       <div class="bg_1 gridColumnSpan_4 gridRowSpan_2">
-        <img src="./img/img14.jpg" alt="" />
+        <img src="./img/img14.jpg" alt="img14" />
       </div>
       <div class="bg_2 gridColumnSpan_2 gridRowSpan_3">
-        <img src="./img/img16.jpg" alt="" />
+        <img src="./img/img16.jpg" alt="img16" />
       </div>
       <div class="bg_green gridColumnSpan_2 gridRowSpan_3">
-        <img src="./img/img3.jpg" alt="" />
+        <img src="./img/img3.jpg" alt="img3" />
       </div>
       <div class="bg_blue gridColumnSpan_2 gridRowSpan_2">
-        <img src="./img/img13.jpg" alt="" />
+        <img src="./img/img13.jpg" alt="img13" />
       </div>
       <div class="bg_2 gridColumnSpan_2 gridRowSpan_3">
-        <img src="./img/img24.jpg" alt="" />
+        <img src="./img/img24.jpg" alt="img24" />
       </div>
       <div class="bg_white gridColumnSpan_2 gridRowSpan_2">
-        <img src="./img/img6.jpg" alt="" />
+        <img src="./img/img6.jpg" alt="img6" />
       </div>
       <div class="bg_yellow bg_2 gridColumnSpan_2 gridRowSpan_3">
-        <img src="./img/img19.jpg" alt="" />
+        <img src="./img/img19.jpg" alt="img19" />
       </div>
       <div class="bg_aquamarine gridColumnSpan_4 gridRowSpan_2">
-        <img src="./img/img22.jpg" alt="" />
+        <img src="./img/img22.jpg" alt="img22" />
       </div>
       <div class="bg_white gridColumnSpan_4 gridRowSpan_2">
-        <img src="./img/img9.jpg" alt="" />
+        <img src="./img/img9.jpg" alt="img9" />
       </div>
       <div class="bg_1 gridColumnSpan_2 gridRowSpan_3">
-        <img src="./img/img18.jpg" alt="" />
+        <img src="./img/img18.jpg" alt="img18" />
       </div>
       <div class="bg_2 gridColumnSpan_2 gridRowSpan_3">
-        <img src="./img/img28.jpg" alt="" />
+        <img src="./img/img28.jpg" alt="img28" />
       </div>
       <div class="bg_green gridColumnSpan_2 gridRowSpan_3">
-        <img src="./img/img12.jpg" alt="" />
+        <img src="./img/img12.jpg" alt="img12" />
       </div>
       <div class="bg_2 gridColumnSpan_2 gridRowSpan_2">
-        <img src="./img/img2.jpg" alt="" />
+        <img src="./img/img2.jpg" alt="img2" />
       </div>
       <div class="bg_green gridColumnSpan_2 gridRowSpan_2">
-        <img src="img/img27.jpg" alt="" />
+        <img src="img/img27.jpg" alt="img27" />
       </div>
       <div class="bg_red gridColumnSpan_4 gridRowSpan_2">
-        <img src="./img/img20.jpg" alt="" />
+        <img src="./img/img20.jpg" alt="img20" />
       </div>
       <div class="bg_yellow gridColumnSpan_3 gridRowSpan_3">
-        <img src="./img/img17.jpg" alt="" />
+        <img src="./img/img17.jpg" alt="img17" />
       </div>
       <div class="bg_orange gridColumnSpan_3 gridRowSpan_2">
-        <img src="./img/img26.jpg" alt="" />
+        <img src="./img/img26.jpg" alt="img26" />
       </div>
       <div class="bg_brown gridColumnSpan_3 gridRowSpan_3">
-        <img src="./img/img5.jpg" alt="" />
+        <img src="./img/img5.jpg" alt="img5" />
       </div>
       <div class="bg_white gridColumnSpan_3 gridRowSpan_2">
-        <img src="./img/img10.jpg" alt="" />
+        <img src="./img/img10.jpg" alt="img10" />
       </div>
       <div class="bg_1 gridColumnSpan_4 gridRowSpan_2">
-        <img src="./img/img11.jpg" alt="" />
+        <img src="./img/img11.jpg" alt="img11" />
       </div>
       <div class="bg_2 gridColumnSpan_2 gridRowSpan_2">
-        <img src="./img/img30.jpg" alt="" />
+        <img src="./img/img30.jpg" alt="img30" />
       </div>
       <div class="bg_2 gridColumnSpan_2 gridRowSpan_2">
-        <img src="./img/img25.jpg" alt="" />
+        <img src="./img/img25.jpg" alt="img25" />
       </div>
       <div class="bg_1 gridColumnSpan_4 gridRowSpan_2">
-        <img src="./img/img1.jpg" alt="" />
+        <img src="./img/img1.jpg" alt="img1" />
       </div>
     </div>
   </section>
