update resume test

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
       <div class="fb_20p">
         <div class="display_flex fd_column">
-          <h2>Jan. 2021 - current</h2>
+          <h2>January 2021 - July 2024</h2>
           <p><strong> Software Developer</strong></p>
           <p>Tecdia Cebu Inc.</p>
           <p>MEPZ1 3rd Ave. Rd, Lapu-lapu City, Cebu</p>
@@ -82,7 +82,7 @@
           <h2>Sep 2020 - Jan. 2021</h2>
           <p><strong>Programmer Analyst</strong></p>
           <p>Prince Retail group of Companies</p>
-          <p></p>Basubas St., Tipolo, Mandaue City</p>
+          <p>Basubas St., Tipolo, Mandaue City</p>
         </div>
       </div>
       <div class="fb_80p">
