--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <li>CSS</li>
         <li>Bootstrap</li>
         <li>Javascript</li>
+        <li>JQuery</li>
+        <li>ASP.NET MVC</li>
         <li>C#</li>
         <li>Visual Basic</li>
         <li>SQL</li>
@@ -61,7 +63,7 @@
     <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
       <div class="fb_20p">
         <div class="display_flex fd_column">
-          <h2>January 2021 - July 2024</h2>
+          <h2>Jan. 2021 - Jul 2024</h2>
           <p><strong> Software Developer</strong></p>
           <p>Tecdia Cebu Inc.</p>
           <p>MEPZ1 3rd Ave. Rd, Lapu-lapu City, Cebu</p>
@@ -79,7 +81,7 @@
     <div class="bg_white w_70p display_flex p_5p br_15 mt_3p gap_3p">
       <div class="fb_20p">
         <div class="display_flex fd_column">
-          <h2>Sep 2020 - Jan. 2021</h2>
+          <h2>Sep. 2020 - Jan. 2021</h2>
           <p><strong>Programmer Analyst</strong></p>
           <p>Prince Retail group of Companies</p>
           <p>Basubas St., Tipolo, Mandaue City</p>
@@ -228,7 +230,7 @@
   <!-- Footer section ---------------------------------------------- -->
   <section id="contact">
     <footer class="bg_lightGray display_flex jc_center">
-      <p class="mtb_1p fs_2rem">© 2023 Norwin C. Sinas</p>
+      <p class="mtb_1p fs_2rem">© 2024 Norwin C. Sinas</p>
     </footer>
   </section>
 
