--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <img src="./img/tamtamcut.jpg" alt="profile pic" class="mh_20p mw_20p  borderRadius_50p mt_7p" />
     <h1 class="ff_lugarismo fs_6rem ai_center color_3 mt_3p">Hello</h1>
     <p class="ff_didact fs_2p5rem ta_justify color_3 mt_3p mb_3p mw_60p">
-      A Computer Science graduate enthusiast, looking for a Web Programming position and willing to maximize necessary
-      knowledge and skills. Having the analytical
-      abilities and technical skills necessary for IT jobs and good moral attitude imperative to have a good
-      relationship to the environment.
+        A passionate Computer Science graduate seeking a position in Web Programming or a related field. Eager
+        to apply and expand my technical expertise while continuously learning new skills. Possesses strong
+        analytical abilities, technical proficiency, and a professional work ethic, fostering positive collaboration in
+        any work environment.
     </p>
   </section>
 
@@ -230,7 +230,7 @@
   <!-- Footer section ---------------------------------------------- -->
   <section id="contact">
     <footer class="bg_lightGray display_flex jc_center">
-      <p class="mtb_1p fs_2rem">© 2024 Norwin C. Sinas</p>
+      <p class="mtb_1p fs_2rem">© 2025 Norwin C. Sinas</p>
     </footer>
   </section>
 
