--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
   <!-- hobby section------------------------------------------------ -->
   <section id="hobbySection" class="bg_white display_flex fd_column ai_center">
     <h1 class="textAlign_center color_3 ff_lugarismo fs_6rem mt_7p">Photography</h1>
-    <p class="ff_didact mt_2p fs_3rem color_5 mw_50p ta_justify">As a hobby of mine, I find my self enjoying taking
-      photo of
-      anything using my phone.</p>
+    <p class="ff_didact mt_2p fs_3rem color_5 mw_50p ta_justify">Photography is one of my hobbies, and I enjoy capturing moments of anything that catches my eye using my phone.</p>
     <div class="gallery mt_10p  mb_10p">
       <div class="bg_1 gridColumnSpan_4 gridRowSpan_2">
         <img src="./img/img14.jpg" alt="img14" />
